--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@types/node": "20.19.2",
