chore: update dependencies and improve context types
- Upgraded Next.js to version 15.4.1 and React to version 19.1.0 in package.json.
- Updated TypeScript and ESLint related packages to their latest versions.
- Enhanced ContextProvider to define MenuItem and DataContextType interfaces for better type safety.
- Refactored useDataContext to return a strongly typed context.
- Updated Header component to utilize the new types and improve readability.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
   "extends": [
     "next/core-web-vitals",
     "plugin:react/recommended",
-    "standard-with-typescript"
+    "plugin:@typescript-eslint/recommended"
   ],
   "settings": {
     "react": {
