--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^15.4.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^4.4.0",
     "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@types/node": "20.19.2",
-    "@types/react": "18.0.20",
-    "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
     "autoprefixer": "^10.4.12",
-    "eslint": "8.23.1",
-    "eslint-config-next": "14.2.3",
-    "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.3.0",
-    "eslint-plugin-react": "^7.31.8",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.4.1",
+    
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^17.0.0",
+    "eslint-plugin-react": "^7.34.2",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
