--- a/package.json
+++ b/package.json
@@ -16,19 +16,18 @@
     "sharp": "^0.34.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "20.19.2",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "autoprefixer": "^10.4.12",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.4.1",
-    
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^17.0.0",
     "eslint-plugin-react": "^7.34.2",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^4.1.11",
     "typescript": "4.8.3"
   }
 }
